Fixed y-overflow for aclib-generator

--- a/ac-lib-generator/style.css
+++ b/ac-lib-generator/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 .hidden {
